# floating-cricket-tracking-ui

./: .gitignore  App.py  controller.py  installer.cfg  main_styles.qss  model.py  requirements.txt  tracking_core_kafka_config.ini  tracking_interface_soccer.py  udp_stream.py  view.py
cricket_view_f/: pyproject.toml
cricket_view_f/src/cricket_view_deps/: common_widget.py  controller.py  model.py  paths.py  view.py
