[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cricket_view_deps"
version = "0.0.1"
authors = [
  { name="Sipho Mancam", email="siphom@seb4vision.co.za" },
]
description = "Floating UI View for the Cricket Tracking Interface"
readme = "README.md"
requires-python = ">=3.10.0"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/pypa/sampleproject"
Issues = "https://github.com/pypa/sampleproject/issues"